# parser-VSA

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dataset_config.example.yaml  dataset_config.yaml  main.py  pyproject.toml
.github/workflows/: lint.yaml
settings/: config.py
src/: models.py  parsing.py  utils.py
