[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Ivan Shevchenko <shevchenko.id@dns-shop.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
ruff-lsp = "^0.0.54"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 80
extend-exclude = ["hooks/"]

[tool.ruff.lint]
ignore = ["B008"]
select = ["A", "B", "C", "E", "F", "I", "Q", "ASYNC", "N", "W", "UP", "T20", "SIM", "ANN204"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"] # unused imports
"models.py" = ["N805", "A003"] # cls instead self, id for modles
"schemas.py" = ["N805", "A003"] # cls instead self, id for modles
"mixins.py" = ["N805", "A003"] # cls instead self, id for modles
"requests.py" = ["N805", "A003"] # cls instead self, id for modles

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
